--- a/Unnatii/src/main/webapp/resources/css/style.css
+++ b/Unnatii/src/main/webapp/resources/css/style.css
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6, p {
 	padding-right: 15px;
 	padding-left: 15px; /* adding the padding to the sides of the elements within the divs, instead of the divs themselves, gets rid of any box model math. A nested div with side padding can also be used as an alternate method. */
 }
+
 a img { /* this selector removes the default blue border displayed in some browsers around an image when it is surrounded by a link */
 	border: none;
 }
@@ -25,14 +26,17 @@ a img { /* this selector removes the default blue border displayed in some brows
 /* ~~ Styling for your site's links must remain in this order - including the group of selectors that create the hover effect. ~~ */
 a:link {
 	color:#414958;
-	text-decoration: underline; /* unless you style your links to look extremely unique, it's best to provide underlines for quick visual identification */
+	/*text-decoration: underline;*/ /* unless you style your links to look extremely unique, it's best to provide underlines for quick visual identification */
 }
 a:visited {
 	color: #4E5869;
-	text-decoration: underline;
+	/*text-decoration: underline;*/
 }
 a:hover, a:active, a:focus { /* this group of selectors will give a keyboard navigator the same hover experience as the person using a mouse. */
-	text-decoration: none;
+	/*text-decoration: none;*/
+}
+a{
+	text-decoration:none;	
 }
 
 /* ~~ this container surrounds all other divs giving them their percentage-based width ~~ */
@@ -82,6 +86,15 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	background:url(../images/footer-back.png) repeat-x;
 	
 }
+.footer-li{
+		font-size: 10px;
+		color: #0088c9;
+		line-height: 18px;
+}
+.footer-li ul{
+	margin-left: 0px;
+}
+
 .box-content{
 	padding-top:50px;
 	
@@ -92,7 +105,45 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	        box-shadow: 0 8px 6px -6px black;
 }
 .footer-content{
-	height:90%;
+	/* //height:90%; */
+}
+footer a,
+footer h4 {
+  color: white;
+}
+footer li {
+  line-height: 6px;
+  padding: 5px 1px;
+  text-align: left;
+}
+footer .center {
+  margin-left: 210px;
+  float: left;
+}
+footer ul {
+  list-style: none;
+}
+.facebook-container {
+  background-color: white;
+  position: absolute;
+  padding-top: 10px;
+  margin: 0 18px;
+  height: 197px;
+  right: 0;
+  top: 0;
+}
+.facebook-left,
+.facebook-right {
+  position: absolute;
+  height: 207px;
+  width: 18px;
+  top: 0;
+}
+.facebook-left {
+  left: -18px;
+}
+.facebook-right {
+  right: -18px;
 }
 .copyright{
 font-size: small;
@@ -130,3 +181,20 @@ font-variant: small-caps;
 	font-family: arial;
 font-weight: bold;
 }
+.label-Font{
+	font-family: serif;
+	font-weight: bold;
+}
+.text-ftp-left {
+margin-top: 10px;
+padding-left: 15px;
+float: left;
+}
+b, strong {
+font-weight: normal;
+font-size: 13px;
+text-color: #414141;
+}
+ul, ol { margin: 1em 0; padding: 0 0 0 0; }
+dd { margin: 0 0 0 40px; }
+nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
