--- a/Unnatii/src/main/webapp/resources/css/style.css
+++ b/Unnatii/src/main/webapp/resources/css/style.css
@@ -184,6 +184,15 @@ font-weight: bold;
 	font-family: serif;
 	font-weight: bold;
 }
+.err{
+	height: 25px;
+	padding: 0;
+	text-align: left;
+font-size: 12px;
+color: #d14747;
+text-transform: uppercase;
+font-family: "din-med",arial,sans-serif;
+}
 .text-ftp-left {
 margin-top: 10px;
 padding-left: 15px;
@@ -194,6 +203,89 @@ font-weight: normal;
 font-size: 13px;
 text-color: #414141;
 }
+
+.btn{
+	background-color: #f2a54d;
+background-image: -webkit-linear-gradient(top,#f27521,#f2a54d);width: 200px;
+margin: 12px auto;display: inline-block;
+font: 14px/26px 'din-med',arial,sans-serif;
+text-transform: uppercase;
+text-align: center;
+text-decoration: none;
+vertical-align: middle;
+cursor: pointer;
+padding: 5px;-webkit-border-radius: 3px;
+border: none;color: #fff;
+}
 ul, ol { margin: 1em 0; padding: 0 0 0 0; }
 dd { margin: 0 0 0 40px; }
 nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
+label {font: 16px/18px 'din-med',arial,sans-serif;text-align: left;color: #333;}
+
+input[type="password"],input[type="text"]{width:262px;font-family:din-med;font-size:14px}
+
+
+#box-table-a
+{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	margin: 45px;
+	width:  900px;
+	text-align: left;
+	border-collapse: collapse;
+}
+#box-table-a th
+{
+	font-size: 13px;
+	font-weight: normal;
+	padding: 8px;
+	background: #b9c9fe;
+	border-top: 4px solid #aabcfe;
+	border-bottom: 1px solid #fff;
+	color: #039;
+}
+#box-table-a td
+{
+	padding: 8px;
+	background: #e8edff; 
+	border-bottom: 1px solid #fff;
+	color: #669;
+	border-top: 1px solid transparent;
+}
+#box-table-a tr:hover td
+{
+	background: #d0dafd;
+	color: #339;
+}
+
+
+#box-table-b
+{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 12px;
+	margin: 45px;
+	width: 480px;
+	text-align: center;
+	border-collapse: collapse;
+	border-top: 7px solid #9baff1;
+	border-bottom: 7px solid #9baff1;
+}
+#box-table-b th
+{
+	font-size: 13px;
+	font-weight: normal;
+	padding: 8px;
+	background: #e8edff;
+	border-right: 1px solid #9baff1;
+	border-left: 1px solid #9baff1;
+	color: #039;
+}
+#box-table-b td
+{
+	padding: 8px;
+	background: #e8edff; 
+	border-right: 1px solid #aabcfe;
+	border-left: 1px solid #aabcfe;
+	color: #669;
+}
+
