--- a/Unnatii/src/main/webapp/resources/css/style.css
+++ b/Unnatii/src/main/webapp/resources/css/style.css
@@ -41,7 +41,7 @@ a{
 
 /* ~~ this container surrounds all other divs giving them their percentage-based width ~~ */
 .container {
-	width: 80%;
+	width: 70%;
 	max-width: 1260px;/* a max-width may be desirable to keep this layout from getting too wide on a large monitor. This keeps line length more readable. IE6 does not respect this declaration. */
 	min-width: 700px;/* a min-width may be desirable to keep this layout from getting too narrow. This keeps line length more readable in the side columns. IE6 does not respect this declaration. */
 	margin: 0 auto; /* the auto value on the sides, coupled with the width, centers the layout. It is not needed if you set the .container's width to 100%. */
@@ -53,6 +53,10 @@ a{
 	/*border-bottom-style:dashed;
 	border-bottom-color:#000;
 	border-bottom-width:2px;*/
+	
+}
+.headerSub {
+	margin-top:30px;
 	
 }
 .header_top{
@@ -96,8 +100,17 @@ a{
 
 .box-content{
 	padding-top:50px;
+	width:100%;
+	margin:0 auto;
 	
 	}
+.box-content a img{
+	
+	width:29%;
+	
+	
+	}	
+	
 .one-edge-shadow {
 	-webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
